fixed sidebar on ie < edge

--- a/app/assets/stylesheets/itsf/backend/application/bootstrap-vertical-navigation.css.less
+++ b/app/assets/stylesheets/itsf/backend/application/bootstrap-vertical-navigation.css.less
@@ -72,7 +72,7 @@
     background-color: unset;
   }
 
-  .sidebar-nav .pull-right {
+  .sidebar-nav .pull-right, .sidebar-nav .navbar-brand {
     float: unset !important;
   }
 
